eclipse_kernel/check_output.txt
warning: constant `MAX_BLOCKS` is never used
  --> /home/moebius/eclipse/eclipsefs-lib/src/blocks.rs:20:7
   |
20 | const MAX_BLOCKS: usize = 4096;
   |       ^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: `eclipsefs-lib` (lib) generated 1 warning
    Checking eclipse_kernel v0.1.0 (/home/moebius/eclipse/eclipse_kernel)
warning: unused imports: `AtomicU64` and `Ordering`
 --> src/boot.rs:4:26
  |
4 | use core::sync::atomic::{AtomicU64, Ordering};
  |                          ^^^^^^^^^  ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unnecessary parentheses around assigned value
   --> src/boot.rs:291:16
    |
291 |         cr0 |= (1 << 1);  // SET MP (bit 1)
    |                ^      ^
    |
    = note: `#[warn(unused_parens)]` (part of `#[warn(unused)]`) on by default
help: remove these parentheses
    |
291 -         cr0 |= (1 << 1);  // SET MP (bit 1)
291 +         cr0 |= 1 << 1;  // SET MP (bit 1)
    |

warning: unnecessary parentheses around assigned value
   --> src/boot.rs:297:16
    |
297 |         cr4 |= (1 << 9);  // OSFXSR
    |                ^      ^
    |
help: remove these parentheses
    |
297 -         cr4 |= (1 << 9);  // OSFXSR
297 +         cr4 |= 1 << 9;  // OSFXSR
    |

warning: unnecessary parentheses around assigned value
   --> src/boot.rs:298:16
    |
298 |         cr4 |= (1 << 10); // OSXMMEXCPT
    |                ^       ^
    |
help: remove these parentheses
    |
298 -         cr4 |= (1 << 10); // OSXMMEXCPT
298 +         cr4 |= 1 << 10; // OSXMMEXCPT
    |

warning: unused import: `x86_64::PhysAddr`
   --> src/memory.rs:286:5
    |
286 | use x86_64::PhysAddr;
    |     ^^^^^^^^^^^^^^^^

warning: unnecessary parentheses around assigned value
   --> src/serial.rs:245:21
    |
245 |         digits[i] = (b'0' + (n % 10) as u8);
    |                     ^                     ^
    |
help: remove these parentheses
    |
245 -         digits[i] = (b'0' + (n % 10) as u8);
245 +         digits[i] = b'0' + (n % 10) as u8;
    |

warning: unused import: `ProcessId`
 --> src/syscalls.rs:7:22
  |
7 | use crate::process::{ProcessId, exit_proces...
  |                      ^^^^^^^^^

warning: unused import: `ProcessId`
    --> src/syscalls.rs:1241:43
     |
1241 | ...f, VMARegion, ProcessId};
     |                  ^^^^^^^^^

warning: unused import: `alloc::vec`
    --> src/syscalls.rs:1244:9
     |
1244 |     use alloc::vec;
     |         ^^^^^^^^^^

warning: unused import: `crate::memory`
    --> src/syscalls.rs:1445:9
     |
1445 |     use crate::memory;
     |         ^^^^^^^^^^^^^

warning: unused imports: `ProcessId` and `create_process`
 --> src/servers.rs:4:22
  |
4 | ...cess::{create_process, ProcessId};
  |           ^^^^^^^^^^^^^^  ^^^^^^^^^

warning: unused import: `alloc::boxed::Box`
 --> src/servers.rs:8:5
  |
8 | use alloc::boxed::Box;
  |     ^^^^^^^^^^^^^^^^^

warning: unused imports: `read_volatile` and `write_volatile`
  --> src/pci.rs:25:17
   |
25 | ...tr::{read_volatile, write_volatile};
   |         ^^^^^^^^^^^^^  ^^^^^^^^^^^^^^

warning: unused import: `alloc::boxed::Box`
 --> src/filesystem.rs:5:5
  |
5 | use alloc::boxed::Box;
  |     ^^^^^^^^^^^^^^^^^

warning: unused import: `constants`
 --> src/filesystem.rs:7:73
  |
7 | ...try, tlv_tags, constants};
  |                   ^^^^^^^^^

warning: unused import: `eclipsefs_lib::NodeKind`
 --> src/filesystem.rs:8:5
  |
8 | use eclipsefs_lib::NodeKind;
  |     ^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `alloc::vec::Vec`
 --> src/fd.rs:5:5
  |
5 | use alloc::vec::Vec;
  |     ^^^^^^^^^^^^^^^

warning: unused import: `alloc::string::String`
 --> src/fd.rs:6:5
  |
6 | use alloc::string::String;
  |     ^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `alloc::vec`
  --> src/bcache.rs:10:5
   |
10 | use alloc::vec;
   |     ^^^^^^^^^^

warning: unused import: `alloc::boxed::Box`
 --> src/scheme.rs:8:5
  |
8 | use alloc::boxed::Box;
  |     ^^^^^^^^^^^^^^^^^

warning: unused import: `crate::process::ProcessId`
  --> src/scheme.rs:10:5
   |
10 | use crate::process::ProcessId;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::memory`
 --> src/elf_loader.rs:4:5
  |
4 | use crate::memory;
  |     ^^^^^^^^^^^^^

warning: unused import: `core::ptr`
 --> src/memory_builtins.rs:2:5
  |
2 | use core::ptr;
  |     ^^^^^^^^^

error[E0425]: cannot find function `sys_mkdir` in this scope
   --> src/syscalls.rs:192:15
    |
192 |         35 => sys_mkdir(arg1, arg2, arg3),
    |               ^^^^^^^^^ not found in this scope

warning: unnecessary `unsafe` block
  --> src/memory.rs:79:29
   |
57 |     unsafe {
   |     ------ because it's nested under this `unsafe` block
...
79 |         let allocator_ref = unsafe { &*all...
   |                             ^^^^^^ unnecessary `unsafe` block
   |
   = note: `#[warn(unused_unsafe)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `stack_top`
   --> src/process.rs:257:9
    |
257 |     let stack_top = crate::elf_loader::se...
    |         ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_stack_top`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `data_ptr`
   --> src/syscalls.rs:355:44
    |
355 | ...type: u64, data_ptr: u64) -> u64 {
    |               ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_data_ptr`

warning: variable does not need to be mutable
    --> src/syscalls.rs:1303:21
     |
1303 | ...ome(mut proc) = process::get_process(...
     |        ----^^^^
     |        |
     |        help: remove this `mut`
     |
     = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `bytes_read`
    --> src/syscalls.rs:1385:32
     |
1385 | ...                   Ok(bytes_read) => {
     |                          ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_bytes_read`

warning: unnecessary `unsafe` block
   --> src/elf_loader.rs:456:5
    |
456 |     unsafe { x86_64::instructions::tlb::f...
    |     ^^^^^^ unnecessary `unsafe` block

warning: unused variable: `features`
   --> src/virtio.rs:556:13
    |
556 |         let features = inl(self.io_base +...
    |             ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_features`

warning: unnecessary `unsafe` block
   --> src/virtio.rs:826:25
    |
744 |         unsafe {
    |         ------ because it's nested under this `unsafe` block
...
826 |                 let b = unsafe { core::pt...
    |                         ^^^^^^ unnecessary `unsafe` block

warning: unused variable: `desc_idx`
   --> src/virtio.rs:842:21
    |
842 | ...       let desc_idx = queue.add_buf(&b...
    |               ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_desc_idx`

warning: unnecessary `unsafe` block
    --> src/virtio.rs:1028:30
     |
 959 | ...   unsafe {
     |       ------ because it's nested under this `unsafe` block
...
1028 | ...           let status = unsafe { read...
     |                            ^^^^^^ unnecessary `unsafe` block

warning: unused variable: `e`
    --> src/virtio.rs:1159:20
     |
1159 | ...    if let Err(e) = device.read_block...
     |                   ^ help: if this is intentional, prefix it with an underscore: `_e`

warning: unnecessary `unsafe` block
   --> src/filesystem.rs:540:34
    |
540 |         let record_block_start = unsafe {
    |                                  ^^^^^^ unnecessary `unsafe` block

warning: unnecessary `unsafe` block
  --> src/main.rs:85:5
   |
85 |     unsafe {
   |     ^^^^^^ unnecessary `unsafe` block

warning: unused variable: `pml4_phys`
   --> src/main.rs:117:9
    |
117 |     let pml4_phys = boot_info.pml4_addr;
    |         ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_pml4_phys`

warning: variable does not need to be mutable
   --> src/main.rs:186:9
    |
186 |     let mut init_loaded = false;
    |         ----^^^^^^^^^^^
    |         |
    |         help: remove this `mut`

For more information about this error, try `rustc --explain E0425`.
warning: `eclipse_kernel` (bin "eclipse_kernel") generated 38 warnings (22 duplicates)
error: could not compile `eclipse_kernel` (bin "eclipse_kernel") due to 1 previous error; 38 warnings emitted
warning: build failed, waiting for other jobs to finish...
warning: `eclipse_kernel` (lib) generated 34 warnings (12 duplicates)
error: could not compile `eclipse_kernel` (lib) due to 1 previous error; 34 warnings emitted
